appId: com.nutsack.wallet
---
- launchApp
- assertVisible: "Nutsack"
- assertVisible: "Create Account"
- tapOn: "Create Account"
- waitForAnimationToEnd